--- a/config/config.json
+++ b/config/config.json
@@ -3,6 +3,8 @@
   "ip" : "localhost",
   "port": "3300",
   "RABBITMQ_IP" : "localhost",
-  "RABBITMQ_PORT" : "15672"
+  "RABBITMQ_PORT" : "15672",
+  "RABBITMQ_ID" : "admin",
+  "RABBITMQ_PW" : "admin"
 
 }
